Continued refactoring of workorder graph: Labls and flags ported, fixed gap between the two parts of a workorder graph on hover.

--- a/var/httpd/htdocs/skins/Agent/default/css/ITSM.ChangeManagement.WorkorderGraph.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/ITSM.ChangeManagement.WorkorderGraph.css
@@ -3,7 +3,7 @@
  * Other parts of that are dynamically created within the dtl.
  *
  * @project     OTRS (http://www.otrs.org) - Agent Frontend
- * @version     $Revision: 1.2 $
+ * @version     $Revision: 1.3 $
  * @copyright   OTRS AG
  * @license     AGPL (http://www.gnu.org/licenses/agpl.txt)
  */
@@ -61,10 +61,29 @@ div.ScaleVerticalLine {
 }
 
 div.WorkorderLabel {
+    position: relative;
     margin-right: 2px;
     float: left;
     text-align: left;
-    position: relative;
+    height: 15px;
+    padding-top: 3px;
+    padding-bottom: 3px;
+    line-height: 14px;
+}
+
+div.WorkorderLabel .Flag {
+    float: left;
+    margin-left: 5px;
+    margin-right: 5px;
+    margin-top: 2px;
+}
+
+div.WorkorderLabel .Flag span {
+    cursor: auto;
+}
+
+div.Workorder {
+    margin-bottom: 5px;
 }
 
 div.Workorder a {
@@ -73,6 +92,7 @@ div.Workorder a {
     padding-top: 3px;
     padding-bottom: 3px;
     height: 15px;
+    position: relative;
 }
 
 div.Workorder a span {
@@ -89,7 +109,7 @@ div.Workorder a span > span {
     position: absolute;
     top: 0px;
     font-size: 3px;
-    z-index: 3;
+    z-index: 4;
     cursor: pointer;
 }
 
